[workspace]

members = [
  "cryptovec",
  "thrussh",
  "thrussh-agent",
  "thrussh-config",
  "thrussh-encoding",
  "thrussh-keys",
  "thrussh-libsodium",
]

[patch.crates-io]
lnk-cryptovec = { path = "cryptovec" }
lnk-thrussh = { path = "thrussh" }
lnk-thrussh-agent = { path = "thrussh-agent" }
lnk-thrussh-config = { path = "thrussh-config" }
lnk-thrussh-encoding = { path = "thrussh-encoding" }
lnk-thrussh-keys = { path = "thrussh-keys" }
lnk-thrussh-libsodium = { path = "thrussh-libsodium" }
