[package]
name = "thrussh-agent"
version = "0.1.0"
edition = "2018"

[dependencies]
byteorder = "1.4"
cryptovec = "0.6.0"
data-encoding = "2.3"
futures = "0.3"
log = "0.4"
thiserror = "1.0"
thrussh-encoding = "0.1"
tokio = { version = "1.6", features = [ "io-util", "rt-multi-thread", "time", "net" ] }