[package]
name = "lnk-thrussh-encoding"
version = "0.1.0"
edition = "2018"
authors = ["Fintan Halpenny <fintan.halpenny@gmail.com>", "Pierre-Étienne Meunier <pe@pijul.org>"]
description = "Encoding primitives"
repository = "https://github.com/FintanH/thrussh"
keywords = ["ssh"]
license = "Apache-2.0"

[dependencies]
byteorder = "1.4"
lnk-cryptovec = "0.6.0"
thiserror = "1.0"
