[package]
name = "lnk-thrussh-libsodium"
version = "0.2.1"
edition = "2018"
authors = ["Fintan Halpenny <fintan.halpenny@gmail.com>", "Pierre-Étienne Meunier <pe@pijul.org>"]
description = "Straightforward bindings to libsodium"
license = "Apache-2.0/MIT"
repository = "https://github.com/FintanH/thrussh"
include = [ "Cargo.toml", "src/lib.rs" ]

[dependencies]
libc = "0.2"
lazy_static = "1.4"
libsodium-sys = "0.2"

[build-dependencies]
pkg-config = "0.3"
vcpkg = "0.2"
